@@ -1,4 +1,5 @@
 current:
+  * fix i25 buffer overrun corner case
   * fix EAN addon enables
   * fix zbarimg to accept autodetected stdin (lone dash)
   * fix Qt 4.6.3 compilation error (patch #3178244)
